plugins {
    id 'com.github.hierynomus.license' version '0.11.0'
    id 'com.github.johnrengelman.shadow' version '1.2.3'
}

group 'com.github.jonathanxd'
version '3.0-SNAPSHOT'

apply plugin: "idea"
apply plugin: 'java'
apply plugin: 'license'
apply plugin: 'maven'
apply plugin: 'com.github.johnrengelman.shadow'

license {
    header rootProject.file("LICENSE_HEADER")
}

defaultTasks 'licenseFormat', 'build', 'test', 'jar', 'shadowJar'

sourceCompatibility = 1.8

// Tasks
jar {
    from "$rootProject.rootDir/LICENSE"

    manifest {
        attributes 'Implementation-Title': baseName,
                'Implementation-Version': version
    }
}

task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    classifier = 'javadoc'
    from javadoc.destinationDir
}

artifacts {
    archives sourcesJar
    archives javadocJar
}

subprojects {

    dependencies {
        compile rootProject
        testCompile rootProject.sourceSets.test.output
    }
}

dependencies {
    compile 'com.github.JonathanxD:JwIUtils:4.1.0d'
    testCompile group: 'junit', name:'junit', version: '4.11'
}

repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
}

test {
    useJUnit()
}


license {
    ext.name = 'WCommands'
    ext.organization = 'TheRealBuggy/JonathanxD (https://github.com/JonathanxD/ & https://github.com/TheRealBuggy/)'
    ext.description = 'Yet Another Command API!'
    ext.url = 'https://github.com/JonathanxD/WCommands'
    ext.year = Calendar.getInstance().get(Calendar.YEAR)
    ext.email = 'jonathan.scripter@programmer.net'

    exclude "**/*.info"
    exclude "**/*.md"
    exclude "res/**"
    exclude "src/main/resources/**"
    exclude "src/test/resources/**"
    
    header rootProject.file('LICENSE_HEADER')
    
    sourceSets = project.sourceSets
    
    ignoreFailures false
    strictCheck true
    
    mapping {
        java = 'SLASHSTAR_STYLE'
    }
}